# docs/swagger/swagger.yaml
@@ -1,11 +1,4 @@
 definitions:
-  api_v1.contentResponseMessage:
-    properties:
-      content:
-        type: string
-      html:
-        type: string
-    type: object
   api_v1.loginRequestPayload:
     properties:
       password:
@@ -27,6 +20,13 @@ definitions:
         description: Deprecated, used only for legacy APIs
         type: string
       token:
+        type: string
+    type: object
+  api_v1.readableResponseMessage:
+    properties:
+      content:
+        type: string
+      html:
         type: string
     type: object
   api_v1.settingRequestPayload:
@@ -185,6 +185,22 @@ paths:
       summary: Create an account
       tags:
       - accounts
+  /api/v1/accounts/{id}:
+    delete:
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No content
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete an account
+      tags:
+      - accounts
   /api/v1/auth/account:
     patch:
       parameters:
@@ -284,7 +300,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api_v1.contentResponseMessage'
+            $ref: '#/definitions/api_v1.readableResponseMessage'
         "403":
           description: Token not provided/invalid
       summary: Get readable version of bookmark.
